<resources>
    <string name="app_name">Retornemos</string>
    <string name="text_username">User Name</string>
    <string name="text_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_registrarse">Sing In</string>
    <string name="text_welcome">Welcome to Retornemos,</string>
    <string name="introduction">Mission</string>
    <string name="text_introduction">Retornemos is projected as a construction applied both to the user and to the market, seeking to indirectly influence the processes of RECYCLING, REDUCTION and REUSE of waste that warrant it. So, we see ourselves in 5 years as an institutional platform at the national level hand in hand with the national government, affiliated companies in a social context and training processes.</string>
    <string name="nota">Important:</string>
    <string name="text_nota">Retornemos arises as a response to the problem of waste management in training centers. In turn, it gives rise to the resolution and application of the educational process for the work of the Analysis and Development of Information Systems (ADSI) curriculum in which the group of developers is enrolled. We bet on the proper management of usable waste and the education of apprentices, trainers and administrators of the complex, seeking to reposition eco-friendly elements such as ECO-BOTTLES and the circularity of the global market.</string>
    <string name="txt_fab">menu</string>
    <string name="messageerrorUsername">Invalide user name</string>
    <string name="Name">Name</string>
    <string name="LastName">Last Name</string>
    <string name="Phone">Phone</string>
    <string name="Save">Save</string>
    <string name="profile">Profile Creation</string>
    <string name="Editarperfil">Edit Profile</string>
    <string name="AboutPediatria">Assigned place</string>
    <string name="todo">To Do</string>
    <string name="text_patrones">Record child growth patterns</string>
    <string name="go">Go</string>
    <string name="history">History</string>
    <string name="info">Information</string>
    <string name="text_google">Login Email</string>
    <string name="text_singout">Sign out</string>
    <string name="prefs_file">com.example.myapplication1.PREFERENCE_FILE_KEY</string>
    <string name="register_email">Register email</string>
    <string name="forgotPassword">Forgot your Password?</string>
    <string name="text_forgotpass">Enter the registered email to recover password and follow the steps</string>


</resources>