<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".ToDoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/cardview_shadow_start_color"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:text="@string/text_patrones"/>
        <Button
            android:id="@+id/btn_detail_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:layout_weight="1"
            android:text="@string/go"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/cardview_shadow_start_color"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:text="@string/history"/>
        <Button
            android:id="@+id/btn_detail_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:layout_weight="1"
            android:text="@string/go"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/cardview_shadow_start_color"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:text="@string/info"/>
        <Button
            android:id="@+id/btn_detail_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:layout_weight="1"
            android:text="@string/go"/>


    </LinearLayout>

</LinearLayout>